- implemented layered architecture