@@ -37,6 +37,12 @@
             <artifactId>javafx-controls</artifactId>
             <version>11</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.0.1</version>
+        </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
@@ -119,6 +125,19 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
+<!--                    VM args: attempt to resolve them in maven-->
+                    <compilerArgs>
+                        <arg>--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls</arg>
+                        <arg>--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</arg>
+                        <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls</arg>
+                        <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls</arg>
+                        <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls</arg>
+                        <arg>--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls</arg>
+                        <arg>--add-exports=javafx.base/com.sun.javafx.collections=org.controlsfx.controls</arg>
+                        <arg>--add-exports=javafx.base/com.sun.javafx.runtime=org.controlsfx.controls</arg>
+                        <arg>--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</arg>
+                        <arg>--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
